# ReasonFlow

./: .gitignore  AGENTS.md  ISSUES.md  Makefile  README.md  Why_Reasonflow.md  docker-compose.yml
Plans/: Design.md  (+3 more)
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_user_preferences.py  003_email_templates.py  004_idempotency_keys.py  005_contacts.py
backend/app/: __init__.py  debug_pagination.py  main.py
backend/app/agent/: __init__.py  graph.py  utils.py
backend/app/api/: __init__.py  router.py
backend/app/core/: __init__.py  config.py  database.py  deps.py  events.py  logging.py  redis.py  security.py  task_tracker.py
backend/app/integrations/: __init__.py
backend/app/llm/: __init__.py  client.py  prompts.py  schemas.py  utils.py
backend/app/models/: __init__.py  agent_log.py  base.py  contact.py  email.py  email_template.py  embedding.py  idempotency_key.py  tool_execution.py  user.py  user_preferences.py
backend/app/retrieval/: __init__.py  context_builder.py  embeddings.py  vector_store.py
backend/app/schemas/: __init__.py  auth.py  batch.py  calendar.py  common.py  crm.py  draft.py  email.py  health.py  metrics.py  notification.py  settings.py  template.py  trace.py
backend/tests/: conftest.py  test_agent_state.py  test_graph.py  test_node_classify.py  test_node_decide.py  test_node_dispatch.py  test_node_execute.py  test_node_generate.py  test_node_retrieve.py  test_node_review.py  test_retrieval.py  test_tool_registry.py
(+165 files in other folders)
